// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<nav
  className="sc-dIUggk grSaCL Sidebar-resources "
>
  <div
    className="sc-hHftDr"
  >
    <div>
      <div
        className="sc-dmlrTW iTieuF"
      >
        
      </div>
      <ul
        className="sc-kfzAmx khbJgg"
      >
        <li
          className="sc-pFZIQ sc-kstrdz eaCWvj gajrif"
        >
          <div
            className="sc-jrAGrp sc-hBEYos ghJJLs gVXwBF isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hKgILt iMooxb isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginBottom": "-16px",
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-dlfnbm hYhRhc"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-dmlrTW iTieuF"
      >
        resources
      </div>
      <ul
        className="sc-kfzAmx khbJgg"
      >
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="resource4"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="resource4"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    resource4
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:36:03.000Z"
                    title="2017-12-21T15:36:03.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="resource9"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="resource9"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    resource9
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:58.000Z"
                    title="2017-12-21T15:35:58.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="resource19"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="resource19"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    resource19
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:48.000Z"
                    title="2017-12-21T15:35:48.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="resource29"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="resource29"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    resource29
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:38.000Z"
                    title="2017-12-21T15:35:38.000Z"
                  >
                    &lt;30s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="resource39"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="resource39"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    resource39
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:28.000Z"
                    title="2017-12-21T15:35:28.000Z"
                  >
                    &lt;45s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="resource49"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="resource49"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    resource49
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:18.000Z"
                    title="2017-12-21T15:35:18.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="resource54"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="resource54"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    resource54
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:13.000Z"
                    title="2017-12-21T15:35:13.000Z"
                  >
                    &lt;1m ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: success"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Completed in 12s, with issues
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<nav
  className="sc-dIUggk grSaCL Sidebar-resources "
>
  <div
    className="sc-hHftDr"
  >
    <div>
      <div
        className="sc-dmlrTW iTieuF"
      >
        
      </div>
      <ul
        className="sc-kfzAmx khbJgg"
      >
        <li
          className="sc-pFZIQ sc-kstrdz eaCWvj gajrif"
        >
          <div
            className="sc-jrAGrp sc-hBEYos ghJJLs gVXwBF isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hKgILt iMooxb isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginBottom": "-16px",
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-dlfnbm hYhRhc"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-dmlrTW iTieuF"
      >
        resources
      </div>
      <ul
        className="sc-kfzAmx khbJgg"
      />
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders list of resources 1`] = `
<nav
  className="sc-dIUggk grSaCL Sidebar-resources "
>
  <div
    className="sc-hHftDr"
  >
    <div>
      <div
        className="sc-dmlrTW iTieuF"
      >
        
      </div>
      <ul
        className="sc-kfzAmx khbJgg"
      >
        <li
          className="sc-pFZIQ sc-kstrdz eaCWvj gajrif"
        >
          <div
            className="sc-jrAGrp sc-hBEYos ghJJLs gVXwBF isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hKgILt iMooxb isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginBottom": "-16px",
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-dlfnbm hYhRhc"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-dmlrTW iTieuF"
      >
        resources
      </div>
      <ul
        className="sc-kfzAmx khbJgg"
      >
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="vigoda"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    vigoda
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:36:07.000Z"
                    title="2017-12-21T15:36:07.000Z"
                  >
                    &lt;5s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Update error
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="snack"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    snack
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  <time
                    dateTime="2017-12-21T15:35:57.000Z"
                    title="2017-12-21T15:35:57.000Z"
                  >
                    &lt;15s ago
                  </time>
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isUnhealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: error"
                >
                  <svg
                    fill="#ffffff"
                  >
                    error.svg
                  </svg>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Update error
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<nav
  className="sc-dIUggk grSaCL Sidebar-resources "
>
  <div
    className="sc-hHftDr"
  >
    <div>
      <div
        className="sc-dmlrTW iTieuF"
      >
        
      </div>
      <ul
        className="sc-kfzAmx khbJgg"
      >
        <li
          className="sc-pFZIQ sc-kstrdz eaCWvj gajrif"
        >
          <div
            className="sc-jrAGrp sc-hBEYos ghJJLs gVXwBF isSelected"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-hKgILt iMooxb isNone"
            >
              <svg>
                checkmark-small.svg
              </svg>
            </div>
            <div
              className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
            >
              All
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      className="sc-bdfBwQ bJwFId is-filtersHidden"
      style={
        Object {
          "marginBottom": "-16px",
          "marginTop": "24px",
        }
      }
    >
      <button
        className="sc-dlfnbm hYhRhc"
        onClick={[Function]}
      >
        Alerts on Top
      </button>
    </div>
    <div>
      <div
        className="sc-dmlrTW iTieuF"
      >
        resources
      </div>
      <ul
        className="sc-kfzAmx khbJgg"
      >
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="vigoda"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="vigoda"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    vigoda
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  —
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Updating…
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
        <li
          className="sc-pFZIQ eaCWvj u-showPinOnHover  isBuilding"
        >
          <div
            className="sc-jrAGrp ghJJLs  isBuilding"
            data-name="snack"
            onClick={[Function]}
            role="button"
            tabIndex={-1}
          >
            <div
              className="sc-kEjbxe fazjKk"
            >
              <div
                className="sc-iqHYGH juiiLS"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isHealthy"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Server: ready"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl sc-fodVxV frNjEq hMCDIC"
                  title="snack"
                >
                  <span
                    className="sc-fFubgz dbrUMP"
                  >
                    snack
                  </span>
                </div>
                <div
                  className="sc-bqyKva eItknN"
                >
                  <button
                    className="sc-eCssSg fZtIvG"
                    onClick={[Function]}
                    title="Pin to Top"
                  >
                    <svg
                      className="sc-gKsewC MUSWU"
                    >
                      pin.svg
                    </svg>
                  </button>
                </div>
                <span
                  className="sc-bkzZxe dGllbM"
                >
                  —
                </span>
              </div>
              <div
                className="sc-crrsfI bAJfaH"
              >
                <div
                  aria-describedby={null}
                  className="sc-hKgILt iMooxb isBuilding"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Update: in progress"
                >
                  <span>
                     
                  </span>
                </div>
                <div
                  className="sc-dQppl frNjEq"
                >
                  Updating…
                </div>
              </div>
            </div>
            <div
              className="sc-idOhPF csSihC"
            >
              <button
                className="sc-iBPRYJ cjfxil"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "padding": "0 0 0 2px",
                  }
                }
                title="Cannot trigger an update while resource is updating or update is pending."
              >
                <svg>
                  trigger-button.svg
                </svg>
              </button>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
  <span />
</nav>
`;
